@@ -1,3 +1,8 @@
+2006-02-26 - standa
+Hardcoded 95DPI for the FT2 vst_font() height until we adjust the code
+to propagate the vwk and get wvk->screen.pixel.height * 25400.
+Little un-#if0ying in ft2.c.
+
 2006-02-24 - johan
 Proper prototypes for stack change calls.
 Fix for too long names in vqt_xfntnames().
